fix: Correct SearchToolsTool to search EXTERNAL MCP servers, not core tools
CRITICAL FIX based on user feedback:

Problem:
- SearchToolsTool was searching the 22 core infrastructure tools
- Core tools are ALREADY pre-registered with LLM (always in context)
- Should search EXTERNAL MCP (Model Context Protocol) tool servers instead

Solution:
- Completely rewrote SearchToolsTool to query external MCP servers
- Returns empty list if no MCP servers configured (mcp.enabled=false)
- Connects to MCP servers via REST API (POST /tools/search)
- Discovers tools from external servers (email, calendar, database, etc.)

Key Changes:
1. Removed ToolRegistry dependency (was searching core tools)
2. Added MCP server URL configuration (@Value mcp.servers)
3. Added MCP enabled flag (@Value mcp.enabled)
4. Implemented queryMCPServer() method for REST API calls
5. Returns empty list when no MCP servers configured

Architecture:
- Core 22 tools: ALWAYS pre-registered with LLM (no search needed)
- MCP tools: Discovered dynamically via search_tools() when needed
- Zero context cost for unused MCP tools

Configuration example (application.yml):
mcp:
  enabled: true
  servers:
    - http://email-mcp-server:8080
    - http://calendar-mcp-server:8080

Example usage:
search_tools(query="send email", top_k=3)
# Returns: send_email, read_inbox, search_emails from Email MCP Server

search_tools(query="database operations")
# Returns: query_postgres, run_migration, backup_db from DB MCP Server

Result: SearchToolsTool now correctly searches EXTERNAL MCP servers,
not the core infrastructure tools which are always available.